--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <div class="w3-top">
     <div class="w3-bar w3-theme-d2 w3-left-align">
      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-     <a href="#" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Logo</a>
-     <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
+     <a href="#" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Home</a>
+     <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Quote</a>
      <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Work</a>
      <a href="#pricing" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Price</a>
      <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
@@ -83,30 +83,36 @@
    <div class="w3-row"><br>
    
    <div class="w3-quarter">
-     <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-     <h3>Johnny Walker</h3>
-     <p>Web Designer</p>
+     <img src="image2.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+     <h3>Jarrod Petersen</h3>
+     <p>Chief Executive Officer</p>
    </div>
    
    <div class="w3-quarter">
-     <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-     <h3>Rebecca Flex</h3>
-     <p>Support</p>
+     <img src="images/Mat.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+     <h3>Mathew Lawton</h3>
+     <p>Head of Innovation</p>
    </div>
    
    <div class="w3-quarter">
-     <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-     <h3>Jan Ringo</h3>
-     <p>Boss man</p>
+     <img src="images/Elisha.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+     <h3>Elisha Rackley</h3>
+     <p>Creative Director</p>
    </div>
    
    <div class="w3-quarter">
-     <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-     <h3>Kai Ringo</h3>
+     <img src="images/Keegan.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+     <h3>Keegan Whitfield</h3>
      <p>Fixer</p>
    </div>
+
+   <div class="w3-quarter">
+    <img src="images/fletcher.jpg" alt="Boss" style="width:45%" class="w3-circle w3-center w3-hover-opacity">
+    <h3>Fletcher Petersen</h3>
+    <p>Network Engineer</p>
+  </div>
    
-   </div>
+  </div>
    </div>
    
    <!-- Work Row -->
