--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
 <body>
@@ -40,21 +41,24 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
-                        <div class="d-flex features-icons-icon"><i class="icon-screen-desktop m-auto text-primary" data-bs-hover-animate="pulse"></i></div>
+                        <div class="d-flex features-icons-icon" data-bs-hover-animate="pulse"><img src="images/HomeInsLogo.ico" style="text-align: center; margin: 0 auto;" alt="" width="72" height="72" title="Bootstrap">
+                            <!-- <i class="icon-screen-desktop m-auto text-primary" data-bs-hover-animate="pulse"></i> --></div>
                         <h3>Home Insurance</h3>
                         <p class="lead mb-0">Click here to get a home &amp; contents quote</p>
                     </div>
                 </div>
+                <!-- <a href="#"> --><!-- Removed anchor as it was pushing element to the left -->
                 <div class="col-lg-4">
                     <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
-                        <div class="d-flex features-icons-icon"><i class="icon-layers m-auto text-primary" data-bs-hover-animate="pulse"></i></div>
+                        <div class="d-flex features-icons-icon" data-bs-hover-animate="pulse"><img src="images/CarInsLogo.ico" style="text-align: center; margin: 0 auto; " alt="" width="72" height="72" title="Bootstrap"></div>
                         <h3>Motor Insurance</h3>
                         <p class="lead mb-0">Click here to get a motor insurance quote</p>
                     </div>
                 </div>
+                </a>
                 <div class="col-lg-4">
                     <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
-                        <div class="d-flex features-icons-icon"><i class="icon-check m-auto text-primary" data-bs-hover-animate="pulse"></i></div>
+                        <div class="d-flex features-icons-icon" data-bs-hover-animate="pulse"><img src="images/LandlordsInsLogo.ico" style="text-align: center; margin: 0 auto; " alt="" width="72" height="72" title="Bootstrap"></div>
                         <h3>Landlords Quote</h3>
                         <p class="lead mb-0">Click here to get a quote for your residential investment property</p>
                     </div>
@@ -65,50 +69,64 @@
     <section class="showcase">
         <div class="container-fluid p-0">
             <div class="row no-gutters">
-                <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image:url(&quot;assets/img/bg-showcase-1.jpg&quot;);"><span></span></div>
+                <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image:url(&quot;images/crash.png&quot;);"><span></span></div>
                 <div class="col-lg-6 my-auto order-lg-1 showcase-text">
-                    <h2>Fully Responsive Design</h2>
-                    <p class="lead mb-0">When you use a theme created with Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+                    <h2>Unrivalled Service</h2>
+                    <p class="lead mb-0">Switch insurance is the first service in Australia that allows you to get several quotes for your car or home & also lodge claims electronically. When you buy a policy with Switch you are given access to lodge and manage claims through our online claims portal.</p>
+                    <p class="lead mb-0">You also will be allocated your own claim manager who you can call regarding anything to do with your claim, rather than spending long periods of time on hold with overseas call centres.</p>
                 </div>
             </div>
             <div class="row no-gutters">
-                <div class="col-lg-6 text-white showcase-img" style="background-image:url(&quot;assets/img/bg-showcase-2.jpg&quot;);"><span></span></div>
+                <div class="col-lg-6 text-white showcase-img" style="background-image:url(&quot;images/fallenTree.png&quot;);"><span></span></div>
                 <div class="col-lg-6 my-auto order-lg-1 showcase-text">
-                    <h2>Updated For Bootstrap 4</h2>
-                    <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes are now using Bootstrap 4!</p>
+                    <h2>Honesty & Integrity</h2>
+                    <p class="lead mb-0">Switch Insurance is a wholely Australian owned insurance broking service. We pride ourselves on the transparency of our fees & providing a service that is solely focused on achieving the best possible result for you.</p>
                 </div>
             </div>
             <div class="row no-gutters">
                 <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image:url(&quot;assets/img/bg-showcase-3.jpg&quot;);"><span></span></div>
                 <div class="col-lg-6 my-auto order-lg-1 showcase-text">
-                    <h2>Easy to Use &amp;&nbsp;Customize</h2>
-                    <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+                    <h2>Easy to use & quick</h2>
+                    <p class="lead mb-0">Get quotes & compare coverage options in just 5 minutes with Switch Insurance's proprietary insurance management platform. Beyond simply providing a quote, once active you can adjust, cancel & claim against an insurance policy all via the application.</p>
                 </div>
             </div>
         </div>
     </section>
     <section class="testimonials text-center bg-light">
         <div class="container">
-            <h2 class="mb-5">What people are saying...</h2>
+            <h2 class="mb-5">The Switch Team</h2>
             <div class="row">
                 <div class="col-lg-4">
-                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="assets/img/testimonials-1.jpg">
-                        <h5>Margaret E.</h5>
-                        <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="images/image2.jpg">
+                        <h5>Jarrod Petersen</h5>
+                        <h5>Chief Executive Officer</h5>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="assets/img/testimonials-2.jpg">
-                        <h5>Fred S.</h5>
-                        <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="images/Mat.jpg">
+                        <h5>Mathew Lawton</h5>
+                        <h5>Head of Innovation</h5>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="assets/img/testimonials-3.jpg">
-                        <h5>Sarah W.</h5>
-                        <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="images/Elisha.jpg">
+                        <h5>Elisha Rackley</h5>
+                        <h5>Creative Director</h5>
                     </div>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="images/fletcher.jpg">
+                        <h5>Fletcher Petersen</h5>
+                        <h5>Lead Web Developer</h5>
+                    </div>
+                </div>
+                    <div class="col-lg-6">
+                        <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="images/Keegan.jpg">
+                            <h5>Keegan Whitfield</h5>
+                            <h5>Lead UI/UX Developer</h5>
+                        </div>
             </div>
         </div>
     </section>
