Quote Links Added
Added links to quote buttons & justified content to centre

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Switch Insurance</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -41,28 +41,31 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
-                        <div class="d-flex features-icons-icon" data-bs-hover-animate="pulse"><img src="images/HomeInsLogo.ico" style="text-align: center; margin: 0 auto;" alt="" width="72" height="72" title="Bootstrap">
+                        <a class="homeIns" href="#"><div class="d-flex justify-content-center features-icons-icon" data-bs-hover-animate="pulse"><img src="images/HomeInsLogo.ico" style="text-align: center; margin: 0 auto;" alt="" width="72" height="72" title="Bootstrap">
                             <!-- <i class="icon-screen-desktop m-auto text-primary" data-bs-hover-animate="pulse"></i> --></div>
-                        <h3>Home Insurance</h3>
-                        <p class="lead mb-0">Click here to get a home &amp; contents quote</p>
+                        <h3 style="color: black;">Home Insurance</h3>
+                        <p class="lead mb-0" style="color: black;">Click here to get a home &amp; contents quote</p>
+                        </a>
                     </div>
                 </div>
                 <!-- <a href="#"> --><!-- Removed anchor as it was pushing element to the left -->
                 <div class="col-lg-4">
                     <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
-                        <div class="d-flex features-icons-icon" data-bs-hover-animate="pulse"><img src="images/CarInsLogo.ico" style="text-align: center; margin: 0 auto; " alt="" width="72" height="72" title="Bootstrap"></div>
-                        <h3>Motor Insurance</h3>
-                        <p class="lead mb-0">Click here to get a motor insurance quote</p>
+                        <a class="homeIns"><div class="d-flex justify-content-center features-icons-icon" data-bs-hover-animate="pulse"><img src="images/CarInsLogo.ico" style="text-align: center; margin: 0 auto; " alt="" width="72" height="72" title="Bootstrap"></div>
+                        <h3 style="color: black;">Motor Insurance</h3>
+                        <p class="lead mb-0" style="color: black;">Click here to get a motor insurance quote</p>
+                    </div>
+                </a>
+                </div>
+                <!-- </a> -->
+                <div class="col-lg-4">
+                    <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
+                        <a href="#"><div class="d-flex justify-content-center features-icons-icon" data-bs-hover-animate="pulse"><img src="images/LandlordsInsLogo.ico" style="text-align: center; margin: 0 auto;" alt="" width="72" height="72" title="Bootstrap" ></div>
+                        <h3 style="color: black;">Landlords Quote</h3>
+                        <p class="lead mb-0" style="color: black;">Click here to get a quote for your residential investment property</p>
                     </div>
                 </div>
                 </a>
-                <div class="col-lg-4">
-                    <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
-                        <div class="d-flex features-icons-icon" data-bs-hover-animate="pulse"><img src="images/LandlordsInsLogo.ico" style="text-align: center; margin: 0 auto; " alt="" width="72" height="72" title="Bootstrap"></div>
-                        <h3>Landlords Quote</h3>
-                        <p class="lead mb-0">Click here to get a quote for your residential investment property</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
