--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <h2 class="mb-5">The Switch Team</h2>
             <div class="row">
                 <div class="col-lg-4">
-                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="images/image2.jpg">
+                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle mb-3" style="height: 145px; width: 195px;" src="images/image2.jpg">
                         <h5>Jarrod Petersen</h5>
                         <h5>Chief Executive Officer</h5>
                     </div>
@@ -112,21 +112,21 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="images/Elisha.jpg">
+                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" style="width: 195px; height: 145px;" src="images/Elisha.jpg">
                         <h5>Elisha Rackley</h5>
                         <h5>Creative Director</h5>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6">
-                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="images/fletcher.jpg">
+                <div class="col-sm-5" style="margin-left: 90px; margin-right: 0px;">
+                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" style="height: 145px; width: 195px; margin-top: 50px;" src="images/fletcher.jpg">
                         <h5>Fletcher Petersen</h5>
                         <h5>Lead Web Developer</h5>
                     </div>
                 </div>
-                    <div class="col-lg-6">
-                        <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="images/Keegan.jpg">
+                    <div class="col-sm-5" style="margin-right: 75px; margin-top: 50px; margin-left: 0px;">
+                        <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" style="height: 145px; width: 195px;" src="images/Keegan.jpg">
                             <h5>Keegan Whitfield</h5>
                             <h5>Lead UI/UX Developer</h5>
                         </div>
