--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
         <div class="container"><a class="navbar-brand" href="#">Switch Insurance</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"></button>
-            <div class="collapse navbar-collapse" id="navcol-1"><a class="btn btn-primary ml-auto" role="button" href="#">Sign In</a></div>
+            <div class="collapse navbar-collapse" id="navcol-1"><a class="btn btn-primary ml-auto" role="button" href="insurerSide/login.html">Sign In</a></div>
         </div>
     </nav>
     <header class="masthead text-white text-center" style="background: url('assets/img/Untitled%20design.png')no-repeat center center;background-size: cover;">
