--- a/insurerSide/insurerIndex.html
+++ b/insurerSide/insurerIndex.html
@@ -280,7 +280,7 @@
                                     <li class="list-group-item">
                                         <div class="row align-items-center no-gutters">
                                             <div class="col mr-2">
-                                                <h6 class="mb-0"><strong>Alien Abduction Claim</strong></h6><span class="text-xs">12:30 AM</span>
+                                                <h6 class="mb-0"><strong>Alien Abduction Claim with Fletchod Jarretsen</strong></h6><span class="text-xs">12:30 AM</span>
                                             </div>
                                             <div class="col-auto">
                                                 <div class="custom-control custom-checkbox"><input class="custom-control-input" type="checkbox" id="formCheck-3"><label class="custom-control-label" for="formCheck-3"></label></div>
