Updates to grammar in Index page and table page.
Secret Sauce.

--- a/insurerSide/table.html
+++ b/insurerSide/table.html
@@ -212,11 +212,11 @@
                                         </tr>
                                         <tr>
                                             <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar2.jpeg">Elisha Petersen<br></td>
-                                            <td>Software Engineer</td>
-                                            <td>Sydney</td>
-                                            <td>38</td>
-                                            <td>2011/05/03<br></td>
-                                            <td>$163,500</td>
+                                            <td>Logistic Regression</td>
+                                            <td>K Nearest Neighbour</td>
+                                            <td>Decision Trees</td>
+                                            <td>Random Forest<br></td>
+                                            <td>SVM's</td>
                                         </tr>
                                         <tr>
                                             <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar3.jpeg">Caesar Whitfield</td>
