--- a/insurerSide/table.html
+++ b/insurerSide/table.html
@@ -205,10 +205,10 @@
                                         <tr>
                                             <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar1.jpeg">Sebastian Wayne Lawton</td>
                                             <td>Integration Specialist</td>
-                                            <td>New York</td>
-                                            <td>61</td>
-                                            <td>2012/12/02<br></td>
-                                            <td>$372,000</td>
+                                            <td>Esperance</td>
+                                            <td>2</td>
+                                            <td>2019/02/17<br></td>
+                                            <td><strong> - $372,000</strong></td>
                                         </tr>
                                         <tr>
                                             <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar2.jpeg">Elisha Petersen<br></td>
