--- a/insurerSide/table.html
+++ b/insurerSide/table.html
@@ -164,16 +164,16 @@
                                     <tbody>
                                         <tr>
                                             <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar1.jpeg">Keegan Rackley</td>
-                                            <td>Accountant</td>
-                                            <td>Tokyo</td>
+                                            <td>Machine Learning</td>
+                                            <td>Coursera</td>
                                             <td>32</td>
                                             <td>1988/11/28</td>
                                             <td>$162,700</td>
                                         </tr>
                                         <tr>
                                             <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar2.jpeg">Angelica Petersen</td>
-                                            <td>Chief Executive Officer(CEO)</td>
-                                            <td>London</td>
+                                            <td>Machine Learning with Python</td>
+                                            <td>Coursera</td>
                                             <td>38</td>
                                             <td>1982/10/09<br></td>
                                             <td>$1,200,000</td>
@@ -181,7 +181,7 @@
                                         <tr>
                                             <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar3.jpeg">Fletcher Whitfield</td>
                                             <td>Junior Technical Author</td>
-                                            <td>San Francisco</td>
+                                            <td>TensorFlow</td>
                                             <td>66</td>
                                             <td>2009/01/12<br></td>
                                             <td>$86,000</td>
