--- a/insurerSide/table.html
+++ b/insurerSide/table.html
@@ -187,11 +187,11 @@
                                             <td>$86,000</td>
                                         </tr>
                                         <tr>
-                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar4.jpeg">David Robinson</td>
-                                            <td>Software Engineer, Researcher</td>
-                                            <td>Cloud</td>
-                                            <td>42</td>
-                                            <td>1978/10/13<br></td>
+                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar4.jpeg">Dave Robinson</td>
+                                            <td>Certified Legend</td>
+                                            <td>Cloud, IoT.</td>
+                                            <td>38</td>
+                                            <td>1994/10/13<br></td>
                                             <td>$ undisclosed.</td>
                                         </tr>
                                         <tr>
