Update to one day it will make sense.
5.11AM

--- a/insurerSide/table.html
+++ b/insurerSide/table.html
@@ -203,7 +203,7 @@
                                             <td>$206,850</td>
                                         </tr>
                                         <tr>
-                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar1.jpeg">Sebastian Wayne Lawton</td>
+                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar1.jpeg"><a href="https://archive.org/details/nikolateslanikolateslacoloradospringsnotes18991900/page/n19/mode/2up">Sebastian Wayne Lawton</a></td>
                                             <td>Integration Specialist</td>
                                             <td>Esperance</td>
                                             <td>2</td>
