Updates to table the were unnoticed previously.

--- a/insurerSide/table.html
+++ b/insurerSide/table.html
@@ -239,7 +239,7 @@
                                             <td>Senior JavaScript Developer</td>
                                             <td>Edinburgh</td>
                                             <td>22</td>
-                                            <td>2012/03/29<br></td>
+                                            <td><a href="https://www.onthisday.com/date/2012/march/29">2012/03/29<br></td>
                                             <td>$433,060</td>
                                         </tr>
                                     </tbody>
