--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <form>
                         <div class="form-row">
                             <div class="col-12 col-md-9 mb-2 mb-md-0"><input class="form-control form-control-lg" type="email" placeholder="Enter your email..."></div>
-                            <div class="col-12 col-md-3"><button class="btn btn-primary btn-block btn-lg" type="submit">Sign up!</button></div>
+                            <div class="col-12 col-md-3"><a href="insurerSide/register.html"><button class="btn btn-primary btn-block btn-lg" type="button">Sign up!</button></a></div>
                         </div>
                     </form>
                 </div>
